[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Tours/PlaceurDeTour.gd" type="Script" id=1]
[ext_resource path="res://Ressources/Asset/Tours/tower test 3.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 263.293, 260.687 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.206299, 0 )
scale = Vector2( 0.1, 0.1 )
shape = SubResource( 1 )

[node name="towerTest1" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
